<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShippingBR</string>
    <string name="action_settings">Configurações</string>
    <string name="hello_world">Hello world!</string>

    <!-- Settings Activity -->
    
    <string name="sedex">Sedex</string>
    <string name="sedex_a_cobrar">Sedex a Cobrar</string>
    <string name="sedex_dez">Sedex 10</string>
    <string name="sedex_hoje">Sedex Hoje</string>
    <string name="pac">PAC</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="alert_at_least_one_service">Você precisa selecionar um ou mais serviço</string>
    
    
    <!-- Form Activity  -->
    
    <string name="cep_origem">Cep de Origem:</string>
    <string name="cep_destino">Cep de Destino:</string>
    <string name="peso_estimado_ate">Peso estimado até:</string>
    <string name="prompt_spinner_peso">Peso estimado até:</string>
    <string name="calcular">calcular</string>
    
    <string-array name="array_pesos">
        <item>0.3</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
</resources>
